--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is my final project of nodejs Workshop",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
   }
 }
